# project-01

./: README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: main.yml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/docker/: dev.Dockerfile  docker-compose.backend.yml
backend/img2mapAPI/: Img2mapAPI.py  __init__.py
backend/img2mapAPI/routers/: __init__.py  converters.py  georefProject.py  server.py
backend/img2mapAPI/utils/: __init__.py  projectHandler.py
backend/img2mapAPI/utils/core/: FileHelper.py  ImageHelper.py  georefHelper.py
backend/img2mapAPI/utils/core/helper/: __init__.py  postgresSqlHelper.py  sqliteHelper.py
backend/img2mapAPI/utils/models/: __init__.py  point.py  pointList.py  project.py
backend/img2mapAPI/utils/storage/: __init__.py
backend/img2mapAPI/utils/storage/data/: __init__.py  postgresSqlHandler.py  sqliteLocalStorage.py  storageHandler.py
backend/img2mapAPI/utils/storage/files/: __init__.py  fileStorage.py  localFileStorage.py  s3FileStorage.py
docs/: Architecture.md  FutureDevSuggestions.md  PipelinesSetup.md  README.md
docs/backend/: FileStructure.md  ScriptsBuildCMD.md
docs/frontend/: FileStructure.md  ScriptsBuildCMD.md
docs/img/: README.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/Editor/: page.tsx
frontend/app/Privacy/: page.tsx
frontend/components/component/: CropImage.tsx  coordinateList.tsx  editor.tsx  imageEdit.tsx  mapStyleToggle.tsx  moveImage.tsx  (+4 more)
frontend/docker/: dev.Dockerfile
(+14 files in other folders)
